# GTA7

./: CMakeLists.txt  README.md  game  glad.c  main.cpp
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
glad/include/glad/: gl.h
glad/src/: gl.c
include/glad/: glad.h
